# study

./: .gitignore  build.bat  run_tests.bat
projects/: CMakeLists.txt
projects/list/: CMakeLists.txt
projects/list/src/: CMakeLists.txt  double_linked_list.cpp  double_linked_list.hpp
projects/list/test/: CMakeLists.txt  test_list.cpp  test_list_templates.cpp
projects/scl/src/long_number/: long_number.cpp  long_number.hpp
projects/scl/test/long_number/: test_long_number.cpp
projects/structures/: CMakeLists.txt
projects/structures/src/: CMakeLists.txt
projects/structures/src/list/: CMakeLists.txt  doubly_linked_list.cpp
projects/structures/src/vector/: CmakeLists.txt  vector.cpp  vector.hpp
projects/structures/test/list/: CmakeLists.txt  test_list.cpp  test_list_templates.cpp
projects/structures/test/vector/: CMakeLists.txt  test_vector_templates.cpp
projects/travell/: CMakeLists.txt  main.cpp  run_travell.bat
projects/travell/Includes/: CMakeLists.txt  Menu.hpp  MenuFunctions.cpp  MenuFunctions.hpp  MenuItems.cpp  MenuItems.hpp
projects/unit_test_example/: CMakeLists.txt
projects/unit_test_example/src/: CMakeLists.txt  insert_sort.cpp  insert_sort.hpp
projects/unit_test_example/test/: CMakeLists.txt  test_insert.cpp
projects/vector/: CMakeLists.txt
projects/vector/src/: CmakeLists.txt
projects/vector/test/: CMakeLists.txt  test_vector.cpp
